New Crowdin updates (#201)
* New translations en_us.json (French)

* New translations en_us.json (Chinese Traditional)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New translations en_us.json (French)

* New translations en_us.json (Chinese Traditional)

* Update source file en_US.json

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New translations en_us.json (French)

* New translations en_us.json (Chinese Traditional)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New translations en_us.json

--- a/Resources/Lang/zh_CN.json
+++ b/Resources/Lang/zh_CN.json
@@ -7,6 +7,8 @@
   "Icon": "♥",
   "NameColor": "#00ffa5",
   "Server": "<#00ffa5>服务器: </color> <b>{0}</b>",
+  "HostIconInMeeting": "HOST: {0}",
+  "SubText.GM": "观赏混乱！",
   "SubText.Crewmate": "光终将普照，<color=#ff1919>传之于众生，而发扬于极盛</color>",
   "SubText.Impostor": "血溅千里，终无人生还，自取灭亡",
   "SubText.Neutral": "自扫门前雪，鹏程万里成大业",
@@ -109,6 +111,10 @@
   "RoleSubCategoryLimitOptions.Neutral_Benign.Max": "最大友善中立职业",
   "RoleSubCategoryLimitOptions.Neutral_Killing.Min": "最少带刀中立职业",
   "RoleSubCategoryLimitOptions.Neutral_Killing.Max": "最大带刀中立职业",
+  "FactionLimits.Impostor.Min": "<#00a5ff>最小</color> <#ffffff>数量的</color> 内鬼职业",
+  "FactionLimits.Impostor.Max": "<#00a5ff>最大</color> <#ffffff>数量的</color> 内鬼职业",
+  "FactionLimits.Neutral.Min": "<#00a5ff>最小</color> <#ffffff>数量的</color> 中立职业",
+  "FactionLimits.Neutral.Max": "<#00a5ff>最大</color> <#ffffff>数量的</color> 中立职业",
   "CTA.TeamEnabled.Prefix": "启用 ",
   "CTA.TeamEnabled.Suffix": " ",
   "CTA.KnowRoles": "玩家知道他人的职业",
@@ -1011,12 +1017,14 @@
   "KPDCamouflageMode": "通讯破坏时伪装的外观",
   "RoleOptions": "身份设置",
   "ModeOptions": "模式设置",
-  "AutoStart": "当大厅人满时开始",
+  "AutoStart": "自动开始",
   "EnableCustomButton": "使用模组按钮样式",
   "EnableCustomSoundEffect": "开启模组技能音效",
   "SwitchVanilla": "切换原版",
   "FastBoot": "快速启动模式",
   "UnlockFPS": "解锁帧数限制",
+  "ShowFPS": "显示FPS",
+  "FPSGame": "帧率: ",
   "ForceOwnLanguage": "强制模组使用您的语言",
   "ForceOwnLanguageRoleName": "强制用您的语言显示职业名",
   "GodMode": "上帝模式",
@@ -1204,10 +1212,12 @@
   "ReadyCheckTitle": "<#ff00>★就绪检查★</color>",
   "EveryoneReadyTitle": "<#00ff00>所有人都准备好了!</color>",
   "PlayersNotReadyTitle": "<#ffff00><#ffab1b>{0}</color>个玩家还没准备!</color>他们是:",
+  "SpectatorsList": "<#888888>以下的 </color>{0}<#888888> 玩家正在观战：</color>",
   "ShieldPersonDiedFirst": "首刀保护（仅限上一局第一个被杀）",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>跟班</color>互相认识",
   "SidekickCanKillSidekick": "<color=#00b4eb>跟班</color>可以击杀其他<color=#00b4eb>跟班</color>",
   "LegacyMafia": "使用旧版",
+  "LegacyTraitor": "使用旧版本",
   "AsthmaticMinRedTime": "最低红灯时间",
   "AsthmaticMaxRedTime": "最大红灯时间",
   "AsthmaticMinGreenTime": "最小绿灯时间",
@@ -1349,6 +1359,8 @@
   "SabotageMasterFixesElectrical": "只需一个开关就能修好灯",
   "SMUsesUsedWhenFixingReactorOrO2": "修复 反应堆/氧气 的所需技能次数",
   "SMUsesUsedWhenFixingLightsOrComms": "修复 照明/通信 所需的技能次数",
+  "SMCanFixSabotageFromAnywhereWithPet": "如果宠物可使用，可以从任何地方修复破坏事件。",
+  "SMMaxFixedViaPet": "通过宠物修复的最大破坏量",
   "SheriffCanKill%role%": "可以执法%role%",
   "SheriffCanKillNeutrals": "可以执法<color=#ffab1b>中立阵营</color>",
   "SheriffCanKillNeutralsMode": "<color=#ffab1b>中立</color> 允许拥有附加职业",
@@ -1669,6 +1681,7 @@
   "KB_BootVentWhenDead": "弹出卡进管道的玩家（可能触发官方反作弊）",
   "JudgeTryHideMsg": "隐藏<color=#f8d85a>法官</color>的指令",
   "TrialLimitPerMeeting": "每次会议审判次数上限",
+  "TrialLimitPerGame": "每局游戏的最大审判次数",
   "JudgeCanTrialMadmate": "可以审判<color=#ff1919>叛徒</color>",
   "JudgeCanTrialConverted": "可以审判<#ffab1b>转换阵营</color>的玩家",
   "VeteranSkillMaxOfUseage": "(初始)最大警戒次数",
@@ -2244,6 +2257,7 @@
   "Warning.MismatchedVersion": "<b>{0}</b>和<b>{1}</b>具有不同版本",
   "Warning.AutoExitAtMismatchedVersion": "房主与{0}的版本不同\\n你将被踢出在{1}秒内",
   "EnabledGMWarning": "您已经启用了管理员。这将使您在每次游戏开始时成为幽灵。 由于未知问题，游戏可能会立即以“每个人死亡”原因结束，如果发生这种情况，请禁用管理员。",
+  "ModdedServerDoesntSupportCNOMessage": "⚠ <b>警告</b> ⚠\\n 您启用了一种游戏模式，该模式需要使用自定义网络对象（fortgreen 玩家）向原版（非模组客户端）玩家显示一些像素艺术。您当前使用的服务器是修改过的（MNA/MEU/MAS），不支持此功能。请使用其他游戏模式（我们有很多不需要自定义网络对象的模式）或切换到其他服务器（如北美、欧洲、亚洲）。",
   "Commands.NoAccess": "您没有使用此命令的权限或当前无法使用它",
   "CommandDescription.LT": "查看大厅计时器",
   "CommandDescription.Dump": "将日志文件导出到桌面",
@@ -2320,6 +2334,7 @@
   "CommandDescription.Achievements": "查看您已解锁的成就和您尚未解锁的成就",
   "CommandDescription.DeathNote": "猜测某人的真名为笔记杀手。",
   "CommandDescription.Whisper": "私信一名玩家",
+  "CommandDescription.Spectate": "让你成为下一场游戏的旁观者。你只需要启用管理员作为主机。",
   "CommandArgs.ChangeSetting.Name": "要更改的设置名称(留空可查看所有设置)",
   "CommandArgs.ChangeSetting.UnknownValue": "（留空可查看此处放置的内容）",
   "CommandArgs.Rename.Name": "你的新名字",
@@ -2409,6 +2424,8 @@
   "MuteMessage": "<#ff0000>你被禁言了，不能发消息，这将会持续<#ffff00>{0}</color>秒</color>",
   "WhisperTitle": "{0} 悄悄地对你说:",
   "DisableWhisperCommand": "禁用 /whisper 指令",
+  "DisableSpectateCommand": "禁用 /specater 指令",
+  "SpectateDisabled": "<#ff0000>X</color> 此大厅内禁用/spectate 指令。",
   "WhisperDisabled": "<#ff0000>X</color> 此大厅内禁用/whisper 指令。",
   "ThankYouForUsingEHR": "感谢您游玩EHR模组!",
   "GMRoles": "<color=#ff5b70>【 ★ 职业列表★ 】</color>",
@@ -2417,6 +2434,7 @@
   "NeutralRoles": "<color=#ffab1b>【 ★ 中立职业 ★ 】</color>",
   "AddonRoles": "<color=#ff9ace>【 ★ 附加职业 ★ 】</color>",
   "GhostRoles": "<color=#888888>【 ★ 鬼魂职业 ★ 】</color>",
+  "AnonymousBodies": "匿名实体",
   "LoadingHint.0": "您知道吗?\n您可以自定义团队分配!\n详细见我们网站上的说明(主菜单上面的链接)!",
   "LoadingHint.1": "您知道吗？\n您可以在大厅中使用 /combo 指令强制禁止某些职业和附加组件组合！\n在这场比赛后试一试吧！",
   "LoadingHint.2": "您知道吗？\n您可以使用自定义命名职业,附加职业,设置等名称！",
@@ -2445,7 +2463,7 @@
   "LoadingHint.25": "当每个人都投票了的时候会议没有结束？\n按F6结束会议，同时也会计算选票！",
   "LoadingHint.26": "您是否有一个朋友认为他们了解一切，而您想证明他们错了？\n打开化学家职业并查看他们的反应！",
   "LoadingHint.27": "开发组们最喜欢的职业:\n达尔文主义,企鹅,顶替者,穿梭者,泡沫,恶棍,逢生者..\n和所有船员职业！awa",
-  "LoadingHint.28": "你知道吗?\nEHR有9种不同的游戏模式! 试试吧!\n使用设置菜单左上角巨大标题旁边的⇄按钮切换游戏模式!",
+  "LoadingHint.28": "你知道吗?\nEHR有11种不同的游戏模式! 试试吧!\n使用设置菜单左上角巨大标题旁边的⇄按钮切换游戏模式!",
   "LoadingHint.29": "你知道吗?\nEHR为专业游戏玩家提供了一种独特的游戏模式，叫做“走走停停”!\n这场比赛后试试吧!",
   "LoadingHint.30": "一遍又一遍地杀死船员？在过去的半个小时里没能尽情释放杀人的欲火？\n在我们的 众生自由 游戏模式中释放你的嗜血欲望！",
   "LoadingHint.31": "您知道吗？\nEHR有一个专属的躲猫猫模式，有12个躲猫猫模式专属的职业！",
@@ -2654,13 +2672,18 @@
   "Achievement.CommonEnemyNo1.Description": "作为中立带刀职业胜利",
   "Achievement.CoordinatedAttack.Description": "作为小丑, 处刑人或冤罪师, 使用其中两种职业赢得胜利",
   "Achievement.ItsJustAPrankBro.Description": "作为自爆兵，用1枚炸弹杀死大厅的一半人",
+  "SpectateCommand.WasSpectatingLastRound": "<#ff0000>X</color> 你已观看最后一轮。你不能再观看。",
+  "SpectateCommand.AlreadySpectating": "<#ff0000>X</color> 你已经在观看下一场游戏。",
+  "SpectateCommand.Success": "<#00ff00>✓</color> 你现在正在观看下一场游戏。",
+  "ReadyClientsInfo": "\\n准备好的客户端: {0} (超时{1}秒)",
   "Vision": "视野",
   "Outside": "外面",
   "UnsupportedVersion": "不支持的 Among Us 版本.\\n请更新Among Us.",
   "Error.MeetingException": "发生错误了:{0}\\r\\n尝试用SHIFT+M+ENTER强制结束会议.",
-  "Error.InvalidRoleAssignment": "错误：在分配职业时发现玩家的职业无效 ({0})",
-  "Error.InvalidColor": "警告：存在使用非法颜色的玩家.",
-  "Error.InvalidColorPreventStart": "其他玩家不允许使用除默认颜色外的颜色，否则会导致严重错误.",
+  "Error.InvalidRoleAssignment": "错误：职业分配过程中为玩家找到无效的职业({0})",
+  "Error.InvalidColor": "错误：只有默认颜色可用 - 这意味着有人在大厅里有小绿人，这会导致断开连接，所以最好踢他们。",
+  "Error.InvalidColorPreventStart": "其他玩家不允许使用其他颜色 (例如fortegreen(小绿人))，否则会导致严重错误",
+  "VersionMismatch": "{0} 安装了不同版本的模组",
   "ErrorLevel1": "可能会出现问题.",
   "ErrorLevel2": "这可能会给游戏带来严重的问题。",
   "ErrorLevel3": "未发布版本",
@@ -2764,7 +2787,8 @@
   "DisabledByProgram": "公开房间的操作已被程序禁用",
   "EnterVentToWin": "选择一个有效目标来点燃他",
   "EatenByPelican": "您被鹈鹕吞了，请等待鹈鹕死亡或会议...",
-  "KBBackCountDown": "你死了，等待<b>{0}</b>秒后复活...",
+  "KBBackCountDown": "<#ff0000>DEAD</color>\\n<#ffffff>Respawning in <#ffff00>{0}</color>s</color>\\n\\n",
+  "SoloKombat.WinnersKillCount": "他们获得了 <color=#ffffff>{0}</color>击杀数!",
   "FireworksPutPhase": "还要安放{0}枚烟花",
   "FireworksWaitPhase": "耐心等待....",
   "FireworksReadyFirePhase": "点燃它!",
@@ -2789,6 +2813,7 @@
   "AntiAdminerVI": "<size=1.7><color=#ffff00>⚠ 生命体征检测仪 ⚠</color></size>",
   "AntiAdminerDL": "<size=1.7><color=#ffff00>⚠ 门禁 ⚠</color></size>",
   "AntiAdminerCA": "<size=1.7><color=#ffff00>⚠ 监控 ⚠</color></size>",
+  "WinsCountTitle": "在此游戏模式下获胜次数",
   "Roles": "职业",
   "Settings": "设置",
   "Addons": "附加职业",
@@ -2937,9 +2962,9 @@
   "Disabled": "已禁用",
   "FailToTrack": "追踪失败",
   "CanGuessTarget": "可以赌他们的目标",
-  "UsePhantomBasis": "对某些职业使用 幻象师的基底（已弃用，请使用取消变形作为触发器 ^^）",
+  "UsePhantomBasis": "使用隐身按钮 (幻象师基础) 作为技能触发器",
   "UsePhantomBasisForNKs": "即使是<#ffab1b>中立</color><#ff1919>击杀类</color>职业也使用幻象师为基底<#ffff00>（实验性）</color>",
-  "UseUnshiftTrigger": "使用变形按钮触发技能",
+  "UseUnshiftTrigger": "使用取消变形按钮 (变形者基础) 作为技能触发器",
   "UseUnshiftTriggerForNKs": "即使是<#ffab1b>中立</color><#ff1919>击杀类</color>职业也使用取消变形作为触发器<#ffff00>（实验性）</color>",
   "Mad-": "背叛的 ",
   "Charmed-": "魅魔小弟 ",
@@ -3331,6 +3356,8 @@
   "Ankylosaurus": "甲龙",
   "AnkylosaurusInfo": "你是一个背甲龙... 我猜",
   "AnkylosaurusInfoLong": "(船员职业)：\\n甲龙不能被猜测，你的移动速度较慢，你有较低的视野，你有多个生命。",
+  "Ankylosaurus.Speed": "<#7fe44c>Ankylosaurus</color> Speed",
+  "Ankylosaurus.Lives": "Maximum Lives",
   "Hypnotist": "催眠师",
   "HypnotistInfo": "防止玩家报告尸体",
   "HypnotistInfoLong": "(内鬼职业):\\n催眠师可以使用变形或宠物按钮施展能力,阻止所有玩家报告尸体.",
@@ -3381,9 +3408,7 @@
   "DynamoInfo": "你会跑得更快",
   "DynamoInfoLong": "(附加职业):\\n开始行走时，您会获得巨大的速度提升，直到您必须静止不动才能重置速度。",
   "Prefix.Dynamo": "闪电侠",
-  "Dynamo.IncreaseSpeedBy": "增加速度",
-  "Dynamo.IncreaseSpeedFrequency": "速度增加几率",
-  "Dynamo.MaxSpeed": "最大速度",
+  "DynamoSuffix": "动态: {0}% 充电",
   "Samurai": "武士",
   "SamuraiInfo": "慢慢的，无知的死亡尤为痛苦...",
   "SamuraiInfoLong": "(中立职业):\\n作为武士,你可以延迟击杀或者正常击杀.如何选择呢?好吧,如果你点击你的击杀按钮(死亡不会立刻发生)并在他们身边停留几秒(就想纵火犯一样),你的击杀冷却时间会减少并且此次击杀将会延迟.如果你并没有停留在他们身边,你会进行一次正常击杀,并会瞬移.",
@@ -3820,6 +3845,25 @@
   "HHNumOfTargets": "目标数量",
   "HHMaxKCD": "最大击杀冷却",
   "HHMinKCD": "最小击杀冷却",
+  "Stasis": "停滞者",
+  "StasisInfo": "冻结时间",
+  "StasisInfoLong": "(内鬼职业):\\n停滞者可以变形/使用宠物/隐身来冻结时间。这意味着，所有玩家都将被冻结和致盲，任何人都无法做任何事情。根据不同的设置，致盲和冻结可能会排除其他与内鬼组队的玩家。",
+  "Stasis.AffectsOtherImpostors": "时间冻结影响其他 <#ff1919>内鬼</color>",
+  "Stasis.TimeFrozenNotify": "冻结时间",
+  "Amogus": "阿莫古斯",
+  "AmogusInfo": "你是拥有嫌疑的小笨蛋",
+  "AmogusInfoLong": "(中立职业):\\n作为阿莫古斯，你可以感谢拉贝克的角色创意 Lol(神金)\\n总之，阿莫格斯是一个带刀中立，可以使用变形/隐身/宠物按钮在普通形态和阿莫古斯形态之间切换。你可以跳管，你有内鬼视野。你只能以阿莫古斯形态杀人。你可以在阿莫古斯形态下停留有限的时间。 在你杀人后，你的阿莫古斯形态会升级。 这些是等级：\\n<b>阿莫古斯 -> 苏祐 -> 苏莫古斯 -> 可疑嫌犯 -> 终极嫌疑</b>\\n当你处于阿莫古斯形态时，你是匿名的，而且根据你的等级看起来也不一样。等级还会赋予你一些只有在阿莫古斯形态下才能使用的额外能力。<size=70%>\\n\\n阿莫古斯: 初始等级为白色的普通阿莫古斯，没有额外的特殊能力。\\n苏祐: 苏祐速度更快，但控制是反向的。\\n苏莫古斯: 宽大的阿莫古斯，有两个面罩。没有人可以与你互动，你也有苏祐能力，但你的控制不再是反向的了。\\n可疑嫌犯: 阿莫古斯但是是机器人。你拥有苏莫古斯的所有能力，此外还能看到射向每个玩家的箭头。\\n终极嫌疑: 红色阿莫古斯。拥有较低级别的所有能力。 你的击杀冷却时间将减少 50%。如果你杀死了某人，你将获得额外的一票。</size>",
+  "Amogus.StartingLevel": "初始等级",
+  "Amogus.SugomaSpeed": "苏祐等级的速度",
+  "Amogus.SuspiciousSusArrowsToBodies": "在可疑嫌犯等级，当有人死亡时，箭头处于死者身上，而不是消失了",
+  "Amogus.UltimateSusVotesPerKill": "每次击杀都获得额外投票的数量，当级等级终极嫌疑时",
+  "Amogus.Suffix": "<#00ffa5>当前等级:</color> <b>{0}</b>",
+  "Amogus.Levels.Amogus": "阿莫古斯",
+  "Amogus.Levels.Sugoma": "苏祐",
+  "Amogus.Levels.Sumogus": "苏莫古斯",
+  "Amogus.Levels.SuspiciousSus": "可疑嫌犯",
+  "Amogus.Levels.UltimateSus": "终极嫌疑",
+  "ExtraVotesPT": "<#00a5ff>(<#00ffff>+<#00ffa5>{0}</color>票数</color>)</color>",
   "Rabbit": "兔子",
   "RabbitInfo": "我看似没有力量，但请记住，天生我材必有用！",
   "RabbitInfoLong": "(船员职业):\\n作为兔子,每完成一个任务,会有一个随机指向一个内鬼的箭头(持续5s)\\n注意!只有完成了一定任务这个能力才能生效",
@@ -4069,11 +4113,17 @@
   "BackstabberTeam.NK": "<#ffab1b>带刀中立</color>",
   "Backstabber.RevealAfterKilling": "击杀后向所有玩家展现",
   "GuessBackstabber": "你不能赌一个已经展现了的背刺者",
+  "HideResults": "Hide Results",
+  "ShowResults": "Show Results",
   "Curser": "诅咒者",
   "CurserInfo": "使他人的生活更加糟糕",
-  "CurserInfoLong": "(中立职业):\\n诅咒者对某人使用你的击杀按钮时，他将获得以下结果之一：<size=80%>\\n-1 能力使用\\n-+1 有害附加\\n-永久低视野\\n-永久低速度</size>\\n如果船员输了，你就赢了。",
+  "CurserInfoLong": "(中立职业):\\n诅咒者对某人使用你的击杀按钮时，他将获得以下结果之一：<size=80%>\\n-1 技能使用\\n-+1 有害附加职业\\n-永久降低视野\\n-永久降低速度</size>\\n如果船员输了，你就赢了。",
   "Curser.LowerVision": "永久性较低视野",
   "Curser.LowerSpeed": "永久性较低速度",
+  "Curser.Notify.0": "您已经从目标中删除了技能使用",
+  "Curser.Notify.1": "您给了目标一个有害的附加职业",
+  "Curser.Notify.2": "你给了你的目标永久降低视野",
+  "Curser.Notify.3": "你给了你的目标永久降低速度",
   "Weatherman": "气象人",
   "WeathermanInfo": "生成自然灾害",
   "WeathermanInfoLong": "(中立职业):\\n天气人可以通过使用宠物/变形随机生成自然灾害。这些灾害与自然灾害游戏模式中的相同. \\n\\n利用这些灾难杀死所有人来赢得胜利！",
@@ -4294,7 +4344,7 @@
   "TetherNoTarget": "你没有目标",
   "Aid": "援助者",
   "AidInfo": "暂时保护玩家",
-  "AidInfoLong": "(船员们):\\n援助者可以使用击杀按钮来临时保护某人免受攻击.但你和你的目标不会知晓是否有人尝试击杀了他.",
+  "AidInfoLong": "(Crewmates):\\nAs the Aid, you may use your kill button on someone to protect them from direct attacks temporarily. Mark your target via your kill button, then vent when you want to activate the shield. Neither you nor your target will know if someone tried to kill your target.",
   "AidDur": "护盾持续时间",
   "AidCD": "发放护盾冷却时间",
   "AidTargetKnowsAboutShield": "目标会知道他们被保护了",
@@ -4521,6 +4571,9 @@
   "RR_VentTimes": "每个玩家能使用通风管道的时间",
   "RR_DisplayRoomName": "显示要进入的房间名称",
   "RR_DisplayArrowToRoom": "显示向到达房间的一个箭头",
+  "RR_DontKillLastPlayer": "不杀死最后一名玩家进入正确房间",
+  "RR_DontLowerTimeLimitWhenTwoPlayersEnterCorrectRoom": "当前两名玩家进入正确的房间时，不要降低时间限制",
+  "RR_DontKillPlayersOutsideRoomWhenTimeRunsOut": "时间结束时不要在房间外杀死玩家",
   "RR_Tutorial_1": "<#ffab1b><size=80%>教程</size></color>：\\n你好!新玩家!欢迎来到抢椅子!\\n",
   "RR_Tutorial_2": "这个游戏模式的目标是尽快到达你名字下的房间。",
   "RR_Tutorial_3": "当前两名玩家进入正确的房间时，时间设置为限制的几秒钟。",
@@ -4544,6 +4597,13 @@
   "AllInOne.RoomRush.Integration": "整合<#ffab1b>抢椅子</color>",
   "AllInOne.SoloKombat.Integration": "整合<#f55252>角逐竞技</color>",
   "AllInOne.Speedrun.Integration": "整合<#800080>速跑</color>",
+  "AllInOne.HotPotato.TimerMultiplier": "烫手山芋 - 计时限制器",
+  "AllInOne.MoveAndStop.MinGreenTimeBonus": "一二三，木头人 - 最低绿色时间加成",
+  "AllInOne.MoveAndStop.MaxGreenTimeBonus": "一二三，木头人 - 最大绿色时间加成",
+  "AllInOne.NaturalDisasters.DisasterSpawnCooldownMultiplier": "自然灾害 - 生成冷却限制器",
+  "AllInOne.NaturalDisasters.WarningDurationMultiplier": "自然灾害 - 警告持续时间限制器",
+  "AllInOne.RoomRush.TimeLimitMultiplier": "抢椅子 - 时间限制器",
+  "AllInOne.Speedrun.TimeLimitMultiplier": "速跑 - 时间限制器",
   "HideAndSeek": "躲猫猫",
   "ModeHideAndSeek": "游戏模式：躲猫猫",
   "ModeDescribe.HideAndSeek": "在躲猫猫游戏模式中,寻找者必须杀死所有藏匿者,而藏匿者则必须在不被杀死的情况下完成所有任务可以获胜.\\n如果倒计时为0,藏匿者也可以获胜.\\n\\n一些特别职业:藏匿者,寻找者,狐狸,巨魔,跳跃者,探测者,探测者,捷特,疾行者,侦探,通风者,探员,任务管理员.",
@@ -4702,6 +4762,7 @@
   "Negotiator.LowVision": "低视野大小",
   "Negotiator.LowSpeed": "低速度",
   "Negotiator.MinVotingTimeLeftToNegotiate": "最短投票时间",
+  "Negotiator.TargetPickSuccess": "你已选择了 <b>{0}</b>",
   "Negotiator.Type.Suicide": "自杀了",
   "Negotiator.Type.HarmfulAddon": "有害的附加职业",
   "Negotiator.Type.LowVision": "获得永久性低视野",
@@ -4709,7 +4770,6 @@
   "Negotiator.FinishNotify": "<#00ffa5>你的目标选择了</color> {0}",
   "Negotiator.TargetMessage": "<b><u>谈判专家强迫您从以下选项中选择一个 (用指令<b>/neg {index}</b>,{index}填你选择的选项前面的数字,例如<b>/neg 1</b>),或者你也可以等死:</u></b>\\n<size=80%>",
   "Negotiator.Title": "<#ffff00>⚠ 谈判专家 ⚠</color>",
-  "Negotiator.TargetPickSuccess": "你已选择了 <b>{0}</b>",
   "Commander": "将军",
   "CommanderInfo": "忠诚!",
   "CommanderInfoLong": "(内鬼职业):\\n将军可以通过跳管/抚摸宠物在 6 种模式之间切换.变形来执行选定的模式.<size=70%>\\n\\n<b><u>标记:</u></b>用所有冒名顶替者可见的独特颜色标记你的目标.以此来命令内鬼们杀死你的目标!\\n\\n<b><u>口哨:</u></b>这表示所有或 1 个特定的<sup>*</sup>的内鬼来到你身边,他们会得到一个指向你的箭头.\\n\\n<b><u>击杀:</u></b>通知所有或 1 个特定<sup>*</sup>的内鬼去击杀.\\n\\n<b><u>大发慈悲:</u></b>变形为某一位船员会用独特的颜色和文字标记该玩家,告诉其他冒名顶替者不要杀死该玩家.变形为内鬼则是告诉那个冒名顶替者不要杀任何人.\\n\\n<b><u>不要破坏:</u></b> 通知所有冒名顶替者不要搞任何破坏.\\n\\n<b><u>使用能力:</u></b> 通知所有或 1 个特定<sup>*</sup>的内鬼使用他们的职业技能.\\n\\n<size=60%><sup>*</sup>如果你变形为一个内鬼,那么这只会通知他.</size></size>",
