--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2771,7 +2771,7 @@
   "JudgeCanTrialInfected": "Can trial <color=#7B8968>Infected</color>",
   "JudgeCanTrialContagious": "Can trial <color=#2E8B57>Contagious</color>",
   "PostLobbyCodeToEHRDiscordServer": "Post the lobby code to the EHR Discord server",
-  "Message.LobbyCodeSent": "<size=90%><#00ffa5>✓</color> <#00a5ff>The lobby code has been sent to the EHR Discord server.</color></size>\\n<size=70%>You can disable this feature in the settings (System Settings tab).</size>",
+  "Message.LobbyCodeSent": "<size=90%><#00ffa5>✓</color> <#00a5ff>The lobby code has been sent to the EHR website. This will help others find EHR lobbies.</color></size>\\n<size=70%>You can disable this feature in the settings (System Settings tab).</size>",
   "ActiveRolesList": "Active Roles List",
   "ForExample": "Example Use",
   "HideGameCodes": "Hide Game Code",
@@ -3770,7 +3770,7 @@
   "TeleportedByTornado": "\\nOh no! You just got caught up in a tornado,\\nand you flew to over here!",
   "Deadlined": "Deadlined",
   "DeadlinedInfo": "Must do a task or use kill button each round",
-  "DeadlinedInfoLong": "(Add-ons):\\nAs the Deadlined, you must complete a task or kill someone each round. If you fail to do so, you will die. If a meeting gets called too soon after the previous one ends (time set by the host), you won't die. This doesn't apply on the first round.",
+  "DeadlinedInfoLong": "(Add-ons):\\nAs the Deadlined, you must complete a task or use your kill button (not necessarily for directly killing) on someone each round. If you fail to do so, you will die. If a meeting gets called too soon after the previous one ends (time set by the host), you won't die. This doesn't apply on the first round.",
   "Prefix.Deadlined": "Deadlined",
   "Deadlined.InactiveTime": "Safe Time After Meetings",
   "Deadlined.MustDoTask": "<size=80%><#ffa500>You must complete a task or kill before the next meeting</color></size>",
@@ -4269,6 +4269,7 @@
   "NKWC.XKills": "Kill X Players",
   "NoteKiller.NumPlayersToKill": "Number of Players to Kill (X =)",
   "NoteKiller.OthersSelfSuffix": "<size=70%>There's a {0} in the game. Your real name is <#00ffa5>{1}</color></size>",
+  "DeathNoteCommand.CanNotGuess": "You've already tried to guess someone's real name and failed, so you can't guess again until the next meeting.",
   "DeathNoteCommand.WrongName": "You've entered the wrong name.",
   "DeathNoteCommand.PlayerNotFoundOrDead": "The player with this name was not found or is already dead.",
   "DeathNoteCommand.Success": "Success! {0} was killed.",
