--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3705,6 +3705,15 @@
   "EnigmaClueLevelTitle": "Enigma Level Clue!",
   "EnigmaClueFriendCodeTitle": "Enigma Friend Code Clue!",
   "EnigmaClueTitle": "Enigma Clue!",
+  "GuesserMaxKillsPerMeeting": "Max Kills Per Meeting",
+  "GuesserMaxKillsPerGame": "Max Kills Per Game",
+  "GuesserNumRestrictions": "Restrict the Number of Guessers on Each Team",
+  "NumGuessersOn.Crewmate.Min": "Minimum Number of Crewmate Guessers",
+  "NumGuessersOn.Crewmate.Max": "Maximum Number of Crewmate Guessers",
+  "NumGuessersOn.Impostor.Min": "Minimum Number of Impostor Guessers",
+  "NumGuessersOn.Impostor.Max": "Maximum Number of Impostor Guessers",
+  "NumGuessersOn.Neutral.Min": "Minimum Number of Neutral Guessers",
+  "NumGuessersOn.Neutral.Max": "Maximum Number of Neutral Guessers",
   "ZombieSpeedReduceInterval": "Speed Reduction Interval",
   "ZombieInitialSpeed": "Initial Speed",
   "ZombieMinimumSpeed": "Minimum Speed",
