Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2035,7 +2035,6 @@
   "GuessNull": "Please select an ID of a living player to guess their role",
   "GuessHelp": "Instructions: /bt [Player ID] [Role Name] \\nExample: /bt 3 Bait \\nYou can see the player IDs before everyone's names \\n or use the /id command to list the player IDs",
   "GGGuessMax": "You've reached the limit of maximum guesses, you can't guess anymore!",
-  "EGGuessMax": "You've reached the limit of maximum guesses, you can't guess anymore!",
   "EGGuessSnitchTaskDone": "You thought you could guess the Snitch when all of their tasks are done? Nice try.... You're not getting out of this that easily.",
   "GuessDoubleShot": "You guessed a role incorrectly, but you have Double Shot so you get another chance!",
   "LaughToWhoGuessSelf": "Tried to guess, who tried to self-guess! It's you! Ahah!",
@@ -3705,6 +3704,15 @@
   "EnigmaClueLevelTitle": "Enigma Level Clue!",
   "EnigmaClueFriendCodeTitle": "Enigma Friend Code Clue!",
   "EnigmaClueTitle": "Enigma Clue!",
+  "GuesserMaxKillsPerMeeting": "Max Kills Per Meeting",
+  "GuesserMaxKillsPerGame": "Max Kills Per Game",
+  "GuesserNumRestrictions": "Restrict the Number of Guessers on Each Team",
+  "NumGuessersOn.Crewmate.Min": "Minimum Number of Crewmate Guessers",
+  "NumGuessersOn.Crewmate.Max": "Maximum Number of Crewmate Guessers",
+  "NumGuessersOn.Impostor.Min": "Minimum Number of Impostor Guessers",
+  "NumGuessersOn.Impostor.Max": "Maximum Number of Impostor Guessers",
+  "NumGuessersOn.Neutral.Min": "Minimum Number of Neutral Guessers",
+  "NumGuessersOn.Neutral.Max": "Maximum Number of Neutral Guessers",
   "ZombieSpeedReduceInterval": "Speed Reduction Interval",
   "ZombieInitialSpeed": "Initial Speed",
   "ZombieMinimumSpeed": "Minimum Speed",
