Prompts, Achievements API, Prevent CNOs on modded servers, Duellist nerf

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3013,6 +3013,12 @@
   "Back": "Back",
   "Yes": "Yes",
   "No": "No",
+  "ResettingOptions": "Resetting Options, hold on.... {0}/{1}",
+  "Promt.EnableRole": "<size=60%>({0}/{1}) {2}\\n</size><size=80%>Enable {3}?</size><size=60%>\\n\\n{4}</size>",
+  "Promt.RequiresPets": "You've enabled a role that requires additional ability triggers (pet/vanish button/unshift button). Would you like to enable the use of the Pet button (setting in Game Modifiers)?",
+  "Promt.ResetAllOptions": "Are you sure you want to reset all options? This action is irreversible and may take few minutes.",
+  "Promt.EnableAllRoles": "Enable all roles and add-ons?<size=80%>\\n\\n<b>Yes</b> - Enable all roles and add-ons\\n<b>No</b> - Enter the quick setup dialog of roles and add-ons</size>",
+  "Promt.ContinueWithQuickSetupAddons": "<b><#00ffa5>You've finished setting up every role!</color></b> Would you like to continue with the quick setup dialog of add-ons?",
   "RpcAntiBlackOutIgnored": "Because of <b>{0}</b>, an unknown error occurred, RPC will be ignored.",
   "RpcAntiBlackOutEndGame": "Because of <b>{0}</b>, an unknown error occurred, game will end to prevent black screen.",
   "RpcAntiBlackOutNotifyInLobby": "Because of <b>{0}</b>, an unknown error occurred, to prevent black screen, turn off [{1}] in settings.",
