more Stop And Go events

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4467,7 +4467,7 @@
   "KillerInfoLong": "KILL EVERYONE TO WIN",
   "MoveAndStop": "STOP AND GO",
   "ModeMoveAndStop": "Gamemode: Stop And Go",
-  "ModeDescribe.MoveAndStop": "In the Stop And Go game mode, everyone has 3 timers, each with a symbol that represents a direction you can move in. For example:\\n← (left) 17s\\n→ (right) 5s\\n● (up and down) 9s\\n\\nEach symbol is either red or green. When the timer next to the symbol reaches 0, the color swaps for that symbol.\\n\\nConcept:\\nYou cannot move in directions which you have a red symbol of, or you die.\\nEveryone is a crewmate, first to finish all their tasks wins!",
+  "ModeDescribe.MoveAndStop": "In the Stop And Go game mode, everyone has 3 timers, each with a symbol that represents a direction you can move in. For example:\\n← (left) 17s\\n→ (right) 5s\\n⇅ (up and down) 9s\\n\\nEach symbol is either red or green. When the timer next to the symbol reaches 0, the color swaps for that symbol.\\n\\nConcept:\\nYou cannot move in directions which you have a red symbol of, or you die.\\nEveryone is a crewmate, first to finish all their tasks wins!",
   "MoveAndStop_RightCounterGreenMin": "Right Counter Minimum Green Time",
   "MoveAndStop_RightCounterGreenMax": "Right Counter Maximum Green Time",
   "MoveAndStop_RightCounterRedMin": "Right Counter Minimum Red Time",
@@ -4489,12 +4489,24 @@
   "MoveAndStop_EventChance_HiddenTimers": "Chance of Hidden Timers",
   "MoveAndStop_EventChance_DoubledTimers": "Chance of Doubled Timers",
   "MoveAndStop_EventChance_HalvedTimers": "Chance of Halved Timers",
+  "MoveAndStop_EventChance_FrozenTimers": "Chance of Frozen Timers",
+  "MoveAndStop_EventChance_VentAccess": "Chance of Vent Access",
+  "MoveAndStop_EventChance_CommsSabotage": "Chance of Comms Sabotage",
+  "MoveAndStop_EventDuration_HiddenTimers": "Duration of Hidden Timers",
+  "MoveAndStop_EventDuration_DoubledTimers": "Duration of Doubled Timers",
+  "MoveAndStop_EventDuration_HalvedTimers": "Duration of Halved Timers",
+  "MoveAndStop_EventDuration_FrozenTimers": "Duration of Frozen Timers",
+  "MoveAndStop_EventDuration_VentAccess": "Duration of Vent Access",
+  "MoveAndStop_EventDuration_CommsSabotage": "Duration of Comms Sabotage",
   "MoveAndStop_Tutorial": "<size=80%><#ffffff><size=100%>Stop on red lights</size>\\nOnly move in directions where you see a green arrow\\nThe timers indicate when the color changes\\nYellow means the light will turn red, so stop moving\\nOrange means the light will turn green, but do not move yet\\nFinish your tasks to win</color></size>",
   "MoveAndStop_LivesRemainingNotify": "<size=2><#ffff00>⚠ YOU LOST A LIFE  /  <#ffff44>{0}</color> REMAINING ⚠</color></size>",
   "MoveAndStop_EventActive": "<#00ffff>[Event]</color> {0} - {1}",
   "MoveAndStop_Event_HiddenTimers": "Hidden Timers",
   "MoveAndStop_Event_DoubledTimers": "Doubled Timers",
   "MoveAndStop_Event_HalvedTimers": "Halved Timers",
+  "MoveAndStop_Event_FrozenTimers": "Frozen Timers",
+  "MoveAndStop_Event_VentAccess": "Vent Access",
+  "MoveAndStop_Event_CommsSabotage": "Comms Sabotage",
   "Tasker": "Tasker",
   "TaskerInfo": "FINISH TASKS FIRST TO WIN",
   "TaskerInfoLong": "FINISH TASKS FIRST TO WIN",
