--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -8,6 +8,7 @@
   "NameColor": "#00ffa5",
   "Server": "<#00ffa5>Server:</color> <b>{0}</b>",
   "HostIconInMeeting": "HOST: {0}",
+  "ModdedClient": "Modded Client",
   "SubText.GM": "Spectate the chaos!",
   "SubText.Crewmate": "Find and exile the <color=#ff1919>Impostors</color>",
   "SubText.Impostor": "Sabotage and kill everyone",
