--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2770,7 +2770,7 @@
   "JudgeCanTrialSidekick": "Can trial <color=#00b4eb>Sidekick</color>",
   "JudgeCanTrialInfected": "Can trial <color=#7B8968>Infected</color>",
   "JudgeCanTrialContagious": "Can trial <color=#2E8B57>Contagious</color>",
-  "PostLobbyCodeToEHRDiscordServer": "Post the lobby code to the EHR Discord server",
+  "PostLobbyCodeToEHRDiscordServer": "Post the lobby code to the EHR Website",
   "Message.LobbyCodeSent": "<size=90%><#00ffa5>✓</color> <#00a5ff>The lobby code has been sent to the EHR website. This will help others find EHR lobbies.</color></size>\\n<size=70%>You can disable this feature in the settings (System Settings tab).</size>",
   "ActiveRolesList": "Active Roles List",
   "ForExample": "Example Use",
