--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1063,6 +1063,7 @@
   "GameStateCommand.ShowTasks": "Show amount of completed tasks",
   "MinPlayersForGameStateCommand": "Minimum alive players to use this command",
   "EveryoneSeesDeathReasons": "Everyone Sees Death Reasons",
+  "HostSeesCommandsEnteredByOthers": "Host Sees Commands Entered By Others",
   "BlockVentMovement": "Block Movement Between Vents (while in a vent)",
   "DoorsResetMode": "Mode",
   "AllClosed": "Close All",
@@ -1625,6 +1626,7 @@
   "MessengerTitle": "<#ff0000>Message from {0}</color>",
   "DisableLobbyMusic": "Disable Lobby Music",
   "EnableCommandHelper": "Enable Command Helper",
+  "ShowModdedClientText": "Show 'Modded Client' Text above modded clients",
   "Evolver": "Evolver",
   "EvolverInfo": "Select an Upgrade After Each Meeting",
   "EvolverInfoLong": "(Neutrals):\\nAs the Evolver, you can choose an upgrade after each meeting. Pet to cycle between the available upgrades. The same upgrade can appear multiple times. Once the timer to pick ends, your upgrade will be applied.\\n\\n<size=70%><b><u>Upgrades:</u></b>\\n- Decrease Kill Cooldown (by 2.5s)\\n- Gain Impostor Vision (unaffected by lights sabotage)\\n- Increase Vision (by 0.4x)\\n- Increase Speed (by 0.25x)\\n- Increase Kill Distance (Short → Medium → Long)\\n- Gain Venting Ability (and 1 use)\\n- Increase Venting Use Limit (by 3)\\n- Gain Sabotage Ability (and 1 use)\\n- Increase Sabotage Use Limit (by 2)\\n- Gain Shield (cannot be killed in the current round)</size>\\n\\n<u><b>Remarks:</b></u>\\nIf you can vent, the number of vent uses you have is displayed next to your role name like this: <b>(V: 1)</b> - Same with the sabotage use limit: <b>(S: 2)</b>",
@@ -2424,6 +2426,7 @@
   "YouUnmuted": "{0} has unmuted you.",
   "MuteMessage": "<#ff0000>You're muted and cannot send messages. The mute will expire in <#ffff00>{0}</color> seconds.</color>",
   "WhisperTitle": "{0} <#ffffff>(ID <#00ffa5>{1}</color>) whispers to you:</color>",
+  "JailTalkTitle": "JAIL",
   "DisableWhisperCommand": "Disable /whisper command",
   "DisableSpectateCommand": "Disable /spectate command",
   "SpectateDisabled": "<#ff0000>X</color> The /spectate command is disabled in this lobby.",
