Create Coven Team

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -12,29 +12,36 @@
   "SubText.GM": "Spectate the chaos!",
   "SubText.Crewmate": "Find and exile the <color=#ff1919>Impostors</color>",
   "SubText.Impostor": "Sabotage and kill everyone",
-  "SubText.Neutral": "A team on their own",
+  "SubText.Neutral": "Work alone to achieve your victory",
+  "SubText.Coven": "Eliminate everyone with your team",
   "SubText.Madmate": "Help the <color=#ff1919>Impostors</color>",
   "SubText.LovingCrewmate": "You are in love with {0}",
   "SubText.LovingImpostor": "You're an <#ff1919>Impostor</color>, but also in love with {0}",
   "TypeImpostor": "Impostors",
   "TypeCrewmate": "Crewmates",
   "TypeNeutral": "Neutrals",
+  "TypeCoven": "Coven",
   "TypeAddon": "Add-ons",
   "TeamImpostor": "Impostor",
   "TeamNeutral": "Neutral",
   "TeamCrewmate": "Crewmate",
   "TeamMadmate": "Madmate",
+  "TeamCoven": "Coven",
   "Neutral": "Neutral",
+  "Coven": "Coven",
   "ShortTeamName.Impostor": "Imp",
   "ShortTeamName.Crewmate": "Crew",
   "ShortTeamName.Neutral": "Neut",
+  "ShortTeamName.Coven": "Coven",
   "YouAreCrewmate": "<size=1.7><color=#ffffff>You are a</color> Crewmate</size>",
   "YouAreImpostor": "<size=1.7><color=#ffffff>You are an</color> Impostor</size>",
   "YouAreNeutral": "<size=1.7><color=#ffffff>You are a</color> Neutral</size>",
+  "YouAreCoven": "<size=1.7><color=#ffffff>You are in the</color> Coven</size>",
   "YouAreMadmate": "<size=1.7><color=#ffffff>You are in the</color> Impostor <color=#ffffff>team</color></size>",
   "CrewmateSub": "Find and exile the <color=#ff1919>Impostors</color>",
   "ImpostorSub": "Sabotage and kill everyone",
   "NeutralSub": "Work alone to achieve your victory",
+  "CovenSub": "Eliminate everyone with your team",
   "MadmateSub": "Help the <color=#ff1919>Impostors</color>",
   "KB_Normal": "Challenger",
   "KB_NormalInfo": "Kill all of them!",
@@ -116,6 +123,8 @@
   "FactionLimits.Impostor.Max": "<#00a5ff>Maximum</color> <#ffffff>amount of</color> Impostor Roles",
   "FactionLimits.Neutral.Min": "<#00ffa5>Minimum</color> <#ffffff>amount of</color> Neutral Roles",
   "FactionLimits.Neutral.Max": "<#00a5ff>Maximum</color> <#ffffff>amount of</color> Neutral Roles",
+  "MinMadmateRoles": "<#00ffa5>Minimum</color> amount of <#ff1919>Madmate</color> Roles",
+  "MaxMadmateRoles": "<#00a5ff>Maximum</color> amount of <#ff1919>Madmate</color> Roles",
   "CTA.TeamEnabled.Prefix": "Enable ",
   "CTA.TeamEnabled.Suffix": " ",
   "CTA.KnowRoles": "Players Know Each Others' Roles",
@@ -3218,6 +3227,7 @@
   "NKCanFindMarshall": "Reveal to <#ffab1b>Neutral Killers</color>",
   "NNKCanFindMarshall": "Reveal to <#ffff00>Neutral Non-Killers</color>",
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
+  "CovenCanFindMarshall": "Reveal to <#7b3fbb>Coven Members</color>",
   "MarshallCanBeGuessedOnTaskCompletion": "Can be Guessed on Task Completion",
   "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
   "Blackmailer": "Blackmailer",
@@ -3411,6 +3421,7 @@
   "Sentry.TeamsCanSeeInfo.Impostor": "<#ff1919>Impostors</color> Can See the Info</color>",
   "Sentry.TeamsCanSeeInfo.NK": "<#ffab1b>Neutral</color> <#ff1919>Killers</color> Can See the Info</color>",
   "Sentry.TeamsCanSeeInfo.NNK": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color> Can See the Info</color>",
+  "Sentry.TeamsCanSeeInfo.Coven": "<#7b3fbb>Coven Members</color> Can See the Info</color>",
   "Cameras": "Cameras",
   "Admin": "Admin",
   "CamerasAndAdmin": "Cameras & Admin",
@@ -4087,9 +4098,11 @@
   "ImpartialImpmin": "Minimum Number of <#ff1919>Impostors</color> to Kill",
   "ImpartialCrewmin": "Minimum Number of <#8cffff>Crewmates</color> to Kill",
   "ImpartialNeutralmin": "Minimum Number of <#ffab1b>Neutrals</color> to Kill",
+  "ImpartialCovenmin": "Minimum Number of <#ffab1b>Coven Members</color> to Kill",
   "ImpartialImpmax": "Maximum Number of <#ff1919>Impostors</color> to Kill",
   "ImpartialCrewmax": "Maximum Number of <#8cffff>Crewmates</color> to Kill",
   "ImpartialNeutralmax": "Maximum Number of <#ffab1b>Neutrals</color> to Kill",
+  "ImpartialCovenmax": "Maximum Number of <#ffab1b>Coven Members</color> to Kill",
   "ImpartialCanWinWhenKillingMore": "Can Win Even When Killing More of a Team than the Maximum",
   "SoulHunter": "Soul Hunter",
   "SoulHunterInfo": "Hunt Souls To Win",
@@ -5087,6 +5100,7 @@
   "HaunterStopped": "<#00ff00>The Haunter was successfully stopped!</color>",
   "HaunterStoppedSelf": "<#ff1313>An impostor came too close to you, your role was removed.</color>",
   "Haunter.TasksBeforeBeingKnown": "Reveal Haunter When They've Completed This Many Tasks",
+  "Haunter.RevealCovenMembers": "Can Reveal <#7b3fbb>Coven Members</color>",
   "Haunter.RevealNeutralKillers": "Can Reveal <#ffab1b>Neutral Killers</color>",
   "Haunter.RevealMadmates": "Can Reveal <#ff1919>Madmates</color>",
   "Haunter.NumberOfReveals": "Number of Players Revealed on Task Completion",
@@ -5100,6 +5114,7 @@
   "RefugeeKillCD": "<color=#ff1919>Renegade</color>'s Kill Cooldown",
   "AmnesiacRemembered": "An Amnesiac remembered your role!",
   "AmnesiacInvalidTarget": "Remember failed",
+  "RememberedCoven": "You remembered you were a Coven member!",
   "RememberedNeutralKiller": "You remembered you were a neutral killer!",
   "RememberedMaverick": "You remembered you were a Maverick!",
   "RememberedPursuer": "You remembered you were a Pursuer!",
