--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -71,6 +71,7 @@
   "ROT.Neutral_Evil": "★ Evil Roles",
   "ROT.Neutral_Benign": "★ Benign Roles",
   "ROT.Neutral_Killing": "★ Killing Roles",
+  "ROT.Coven_Miscellaneous": "★ Miscellaneous Roles",
   "ROT.Vanilla": "★ Vanilla Roles",
   "ROT.Basic": "★ Basic Roles",
   "ROT.AddonType.ImpOnly": "★ Impostor-Only Add-ons",
@@ -5480,6 +5481,7 @@
   "PotionMasterInfo": "Use potions to support the Coven",
   "PotionMasterInfoLong": "(Coven):\\nUse potions on players to support the Coven. Using a potion on a Coven member gives them a medic shield. Using a potion on a non-Coven member reveals their role to all Coven members. Upon gaining the Necronomicon, instead of revealing roles, you kill non-Coven members.",
   "PotionMaster.ShieldDuration": "Shield Duration",
+  "PotionMaster.Suffix": "<{1}>Shielded</color> <#888888>-</color> <b>{0}</b>",
   "Poache": "Poache",
   "PoacheInfo": "Poison kills with delay or disables votes",
   "PoacheInfoLong": "(Coven):\\nPoison a player, making them unable to vote in the next meeting. Players will not know they've been poisoned. Upon gaining the Necronomicon, poisoned players will die a few seconds (determined by the host) after attempting to poison someone.",
@@ -5494,6 +5496,7 @@
   "Goddess": "Goddess",
   "GoddessInfo": "Stone gaze kills and stuns",
   "GoddessInfoLong": "(Coven):\\nUse a stone gaze (vanish button), causing anyone who interacts with you to die, much like a Veteran. Unlike a Veteran, all bodies will be stoned and cannot be reported. Upon gaining the Necronomicon, you can kill players directly, and they will still be stoned.",
+  "Goddess.Suffix": "<{1}>Stone Gazing</color> <#888888>-</color> <b>{0}</b>",
   "Augur": "Augur",
   "AugurInfo": "Guess roles",
   "AugurInfoLong": "(Coven):\\nYou can guess players' roles during meetings. You cannot gain the Necronomicon, similar to a Reaper.",
