--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1302,9 +1302,8 @@
   "HasSidekick": "Has <color=#00b4eb>Sidekick</color>",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
-  "CovenRolesMinPlayer": "Minimum Amount of <color=#8e44ad>Coven</color> members",
-  "CovenRolesMaxPlayer": "Maximum Amount of <color=#8e44ad>Coven</color> members",
   "CovenLeaderKillCooldown": "<color=#8e44ad>Coven Leader</color>'s Kill Cooldown",
+  "CovenReceiveNecronomiconAfterNumMeetings": "Number of Meetings after which the <color=#8e44ad>Coven</color> will start receiving the <color=#8e44ad>Necronomicon</color>",
   "ImpKnowAlliesRole": "<color=#ff1919>Impostors</color> know the roles of other <color=#ff1919>Impostors</color>",
   "ImpKnowWhosMadmate": "<color=#ff1919>Impostors</color> know <color=#ff1919>Madmates</color>",
   "MadmateKnowWhosImp": "<color=#ff1919>Madmates</color> know <color=#ff1919>Impostors</color>",
