Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1302,9 +1302,8 @@
   "HasSidekick": "Has <color=#00b4eb>Sidekick</color>",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
-  "CovenRolesMinPlayer": "Minimum Amount of <color=#8e44ad>Coven</color> members",
-  "CovenRolesMaxPlayer": "Maximum Amount of <color=#8e44ad>Coven</color> members",
   "CovenLeaderKillCooldown": "<color=#8e44ad>Coven Leader</color>'s Kill Cooldown",
+  "CovenReceiveNecronomiconAfterNumMeetings": "Number of Meetings after which the <color=#8e44ad>Coven</color> will start receiving the <color=#8e44ad>Necronomicon</color>",
   "ImpKnowAlliesRole": "<color=#ff1919>Impostors</color> know the roles of other <color=#ff1919>Impostors</color>",
   "ImpKnowWhosMadmate": "<color=#ff1919>Impostors</color> know <color=#ff1919>Madmates</color>",
   "MadmateKnowWhosImp": "<color=#ff1919>Madmates</color> know <color=#ff1919>Impostors</color>",
@@ -1668,6 +1667,7 @@
   "QuickShooterShapeshiftCooldown": "Shapeshift Cooldown",
   "MeetingReserved": "Max Bullets reserved for a meeting",
   "AccurateCheckMode": "Can know specific role when tasks are not done",
+  "NumRolesListedForEachPlayer": "Number of roles listed for each player",
   "CamouflageCooldown": "Camouflage Cooldown",
   "CamouflageDuration": "Camouflage Duration",
   "EraseLimit": "Max Erases",
@@ -5481,6 +5481,8 @@
   "SpellCaster": "Spellcaster",
   "SpellCasterInfo": "Hex all players to win",
   "SpellCasterInfoLong": "(Coven):\\nConjure hexes on players; when all players are hexed, the Coven wins. Upon gaining the Necronomicon, you will spell (like the Witch) all targets that are or become hexed.",
+  "SpellCaster.WinConditionMet": "The Coven will win after this meeting if the {0} is still alive.",
+  "SpellCaster.WinConditionMetTitle": "<#ffff00>⚠</color> The {0} has hexed all non-Coven players! <#ffff00>⚠</color>",
   "PotionMaster": "Potion Master",
   "PotionMasterInfo": "Use potions to support the Coven",
   "PotionMasterInfoLong": "(Coven):\\nUse potions on players to support the Coven. Using a potion on a Coven member gives them a medic shield. Using a potion on a non-Coven member reveals their role to all Coven members. Upon gaining the Necronomicon, instead of revealing roles, you kill non-Coven members.",
