--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4563,7 +4563,7 @@
   "RunnerInfoLong": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
   "CaptureTheFlag": "CAPTURE THE FLAG",
   "ModeCaptureTheFlag": "Gamemode: Capture The Flag",
-  "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by petting near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
+  "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by clicking your <b>Vanish</b> button near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
   "CTF_AlertTeamMembersOfFlagTaken": "Alert Team Members When their Flag is Taken",
   "CTF_ArrowToEnemyFlagCarrier": "Arrow to Enemy Flag Carrier",
   "CTF_AlertTeamMembersOfEnemyFlagTaken": "Alert Team Members When the Enemy's Flag is Taken",
