after meeting tasks runs if player is dead

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1302,8 +1302,8 @@
   "HasSidekick": "Has <color=#00b4eb>Sidekick</color>",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
-  "CovenLeaderKillCooldown": "<color=#8e44ad>Coven Leader</color>'s Kill Cooldown",
-  "CovenReceiveNecronomiconAfterNumMeetings": "Number of Meetings after which the <color=#8e44ad>Coven</color> will start receiving the <color=#8e44ad>Necronomicon</color>",
+  "CovenLeaderKillCooldown": "<color=#7b3fbb>Coven Leader</color>'s Kill Cooldown",
+  "CovenReceiveNecronomiconAfterNumMeetings": "Number of Meetings after which the <color=#7b3fbb>Coven</color> will start receiving the <color=#7b3fbb>Necronomicon</color>",
   "ImpKnowAlliesRole": "<color=#ff1919>Impostors</color> know the roles of other <color=#ff1919>Impostors</color>",
   "ImpKnowWhosMadmate": "<color=#ff1919>Impostors</color> know <color=#ff1919>Madmates</color>",
   "MadmateKnowWhosImp": "<color=#ff1919>Madmates</color> know <color=#ff1919>Impostors</color>",
@@ -2454,6 +2454,7 @@
   "ImpostorRoles": "【 ★ Impostor Roles ★ 】",
   "CrewmateRoles": "【 ★ Crewmate Roles ★ 】",
   "NeutralRoles": "<color=#ffab1b>【 ★ Neutral Roles ★ 】</color>",
+  "CovenRoles": "<color=#7b3fbb>【 ★ Coven Roles ★ 】</color>",
   "AddonRoles": "<color=#ff9ace>【 ★ Add-ons ★ 】</color>",
   "GhostRoles": "<color=#888888>【 ★ Ghost Roles ★ 】</color>",
   "AnonymousBodies": "Anonymous Bodies",
@@ -3388,6 +3389,7 @@
   "AnkylosaurusInfoLong": "(Crewmates):\\nAs the Ankylosaurus, you cannot be guessed, your movement is slower, you have a lower vision, and you have multiple lives.",
   "Ankylosaurus.Speed": "<#7fe44c>Ankylosaurus</color> Speed",
   "Ankylosaurus.Lives": "Maximum Lives",
+  "GuessAnkylosaurus": "You cannot guess the Ankylosaurus",
   "Hypnotist": "Hypnotist",
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
