--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -723,7 +723,7 @@
   "TwisterInfoLong": "(Impostors):\\nAs the Twister, you can use shapeshifting/petting to swap the position of all players randomly.\\n\\nThe Twister itself will not swap places with anyone, and players who are in vents cannot be teleported.",
   "LurkerInfoLong": "(Impostors):\\nAs the Lurker, you can jump into a vent to reduce your cooldown by a certain number of seconds. After you kill, your cooldown is reset to its original value.",
   "ConvictInfoLong": "(Madmates):\\nAs the Convict, you now work for the Impostors.",
-  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target; if you have at least one ability, use left. You gain one ability to use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color>/<#ffab1b>Neutral</color>).",
+  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target; if you have at least one ability, use left. You gain one ability to use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color>/<#ffab1b>Neutral</color>/<#7b3fbb>Coven</color>).",
   "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, you were an Amnesiac who remembered an Impostor role. Help the Impostors kill the crewmates.",
   "UnderdogInfoLong": "(Impostors):\\nAs the Underdog, your kill cooldown is longer until there's a certain amount of players alive. After that, your cooldown is shorter.",
   "EvilDivinerInfoLong": "(Impostors):\\nAs the Consigliere, you can reveal the roles of other players using your kill button.\\n\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
@@ -1069,6 +1069,7 @@
   "GameStateCommand.ShowConvertedCount": "Show amount of alive <#ffab1b>Converted</color> Players (excluding <#ff1919>Madmates</color>)",
   "GameStateCommand.ShowNNKCount": "Show amount of alive <#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color>",
   "GameStateCommand.ShowNKCount": "Show amount of alive <#ffab1b>Neutral</color> <#ff1919>Killers</color>",
+  "GameStateCommand.ShowCovenCount": "Show amount of alive <#7b3fbb>Coven members</color>",
   "GameStateCommand.ShowCrewCount": "Show amount of alive <#8cffff>Crewmates</color>",
   "GameStateCommand.ShowRomanticState": "Show <#ff1493>Romantic</color> pair state",
   "GameStateCommand.ShowLoversState": "Show <#ff9ace>Lovers</color> pair state",
@@ -1179,6 +1180,7 @@
   "DisableZiplineForCrew": "Disable Zipline for <color=#8cffff>Crewmates</color>",
   "DisableZiplineForImps": "Disable Zipline for <color=#ff1919>Impostors</color>",
   "DisableZiplineForNeutrals": "Disable Zipline for <color=#ffab1b>Neutrals</color>",
+  "DisableZiplineForCoven": "Disable Zipline for <color=#7b3fbb>Coven members</color>",
   "DisableShapeshiftAnimations": "Disable Shapeshift Animations",
   "DisableAllShapeshiftAnimations": "Disable All Shapeshift Animations",
   "CTA.PlayersCanWinWithOriginalTeam": "Custom Teamed Players Can Win With Their Original Team",
@@ -1195,6 +1197,7 @@
   "ConfirmEjections.Role": "Role",
   "ShowImpRemainOnEject": "Show remaining <color=#ff1919>Impostors</color> on ejects",
   "ShowNKRemainOnEject": "Show remaining <color=#ffab1b>Neutral Killers</color> on ejects",
+  "ShowCovenRemainOnEject": "Show remaining <color=#7b3fbb>Coven members</color> on ejects",
   "ConfirmEgoistOnEject": "Confirm <color=#5600ff>Egoists</color> on ejection",
   "ConfirmLoversOnEject": "Confirm <color=#ff9ace>Lovers</color> on ejection",
   "ShowTeamNextToRoleNameOnEject": "Show what team the ejected player's role is on",
@@ -1239,12 +1242,14 @@
   "ArsonistCanIgniteAnytime": "Can Ignite Anytime",
   "ArsonistMinPlayersToIgnite": "Minimum Doused Players required to Ignite",
   "ArsonistMaxPlayersToIgnite": "Maximum Amount of Doused Players at once",
-  "RemainingText.Prefix.SingleImp": "There is",
-  "RemainingText.Prefix.PluralImp": "There are",
+  "RemainingText.Prefix.Single": "There is",
+  "RemainingText.Prefix.Plural": "There are",
   "RemainingText.ImpSingle": "Impostor",
   "RemainingText.ImpPlural": "Impostors",
   "RemainingText.NKSingle": "Neutral Killer",
   "RemainingText.NKPlural": "Neutral Killers",
+  "RemainingText.CovenSingle": "Coven member",
+  "RemainingText.CovenPlural": "Coven members",
   "RemainingText.Suffix": " left",
   "RemainingText.EjectionSuffix.NKSingle": "remains.",
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
@@ -1253,6 +1258,7 @@
   "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> <size=70%>(excluding <#ff1919>Madmates</color>)</size>: {0}",
   "GSInfo.NNKCount": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color>: {0}",
   "GSInfo.NKCount": "<#ffab1b>Neutral</color> <#ff1919>Killers</color>: {0}",
+  "GSInfo.CovenCount": "<#7b3fbb>Coven members:</color> {0}",
   "GSInfo.CrewCount": "<#8cffff>Crewmates:</color> {0}",
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Number of <#ff9ace>Lovers</color> Alive: {0}",
@@ -1389,6 +1395,7 @@
   "SheriffCanKillLovers": "Can Kill <color=#ff9ace>Lovers</color>",
   "SheriffCanKillMadmate": "Can Kill <color=#ff1919>Madmates</color>",
   "SheriffCanKillContagious": "Can Kill <color=#2E8B57>Contagious</color> players",
+  "SheriffCanKillCoven": "Can Kill <color=#7b3fbb>Coven members</color>",
   "SheriffKeepsGameGoing": "Keeps the game going",
   "SheriffSetMadCanKill": "Non-<color=#8cffff>Crew</color> <color=#f8cd46>Sheriff</color> Configuration",
   "SheriffMadCanKillImp": "Can kill <color=#ff1919>Impostors</color>",
@@ -1763,6 +1770,7 @@
   "ImpCanBeInLove": "<color=#ff1919>Impostors</color> can be <color=#ff9ace>in love</color>",
   "CrewCanBeInLove": "<color=#8cffff>Crewmates</color> can be <color=#ff9ace>in love</color>",
   "NeutralCanBeInLove": "<color=#ffab1b>Neutrals</color> can be <color=#ff9ace>in love</color>",
+  "CovenCanBeInLove": "<color=#7b3fbb>Coven members</color> can be <color=#ff9ace>in love</color>",
   "HexesLookLikeSpells": "<color=#ff00ff>Hexes</color> appear as <color=#ff1919>spells</color>",
   "AddictWarning": "<#ffff00>You must vent soon or you'll suicide!</color>",
   "DoppelgangerWarning": "<#ffff00>The Doppelganger swapped skins with you!</color>",
@@ -2085,7 +2093,11 @@
   "KB_Buff_HPReco": "Gain: Recover HP Per Second +{0}",
   "KB_Buff_ATK": "Gain: Attack +{0}",
   "KB_Buff_DF": "Gain: Defense +{0}",
-  "NKWinsBySabotageIfNoImpAlive": "<#ffab1b>Neutral</color> <#ff1919>Killers</color> win by critical sabotage time limit if there are no <#ff1919>Impostors</color> alive",
+  "NKWinsBySabotageIfNoImpAlive": "The team that wins by critical sabotage time limit if there are no <#ff1919>Impostors</color> alive",
+  "IfSelectedTeamIsDead": "If the selected team is dead, then the winning team is",
+  "SabotageTimeLimitWinners.Imps": "<#ff1919>Impostors</color>",
+  "SabotageTimeLimitWinners.NKs": "<#ffab1b>Neutral</color> <#ff1919>Killers</color>",
+  "SabotageTimeLimitWinners.Coven": "<#7b3fbb>Coven</color>",
   "MorticianGetNoInfo": "According to your inspection, <b>{0}</b> did not seem to have contact with anyone during their lifetime.",
   "MorticianGetInfo": "According to your inspection, the last person <b>{0}</b> came into contact with during their lifetime was <b>{1}</b>.",
   "MediumshipHelp": "<b>/ms yes</b> to agree\\n<b>/ms no</b> to disagree",
@@ -3079,9 +3091,9 @@
   "NeutralRemain": "{0} <color=#ffab1b>Neutrals</color> remain",
   "OneNeutralRemain": "1 <color=#ffab1b>Neutral</color> remains",
   "IsGood": "{0} was a <color=#8cffff>Crewmate</color>",
-  "BelongTo": "{0} belongs to {1}",
+  "BelongTo": "{0}'s alignment was {1}",
   "GG": "GG! No more killers remain. <#8cffff>Crewmates</color> win!",
-  "IWonderWhatsLeft": "<#ff1919>Impostors</color> are dead, but <#ffab1b>Neutrals</color> may remain.",
+  "IWonderWhatsLeft": "All <#ff1919>Impostors</color> are dead, but the game continues....",
   "SubText.Bloodlust": "With a secret....",
   "GameOverReason.HumansByVote": "<color=#8cffff>All <color=#ff1919>Impostors</color> and <color=#ffab1b>Neutral Killers</color> were ejected or killed</color>",
   "GameOverReason.HumansDisconnect": "<color=#777777>Crewmates disconnected</color>",
@@ -5450,6 +5462,7 @@
   "ImpCanBeRole": "<color=#ff1919>Impostors</color> can become {role}",
   "CrewCanBeRole": "<color=#8cffff>Crewmates</color> can become {role}",
   "NeutralCanBeRole": "<color=#ffab1b>Neutrals</color> can become {role}",
+  "CovenCanBeRole": "<color=#7b3fbb>Coven members</color> can become {role}",
   "SuccessfulDuelsToWin": "Number of successful duels needed to win",
   "PlagueBearerCD": "Plague cooldown",
   "PestilenceCD": "<color=#343136>Pestilence</color> Kill cooldown",
@@ -5509,6 +5522,8 @@
   "Augur": "Augur",
   "AugurInfo": "Guess roles",
   "AugurInfoLong": "(Coven):\\nYou can guess players' roles during meetings. You cannot gain the Necronomicon, similar to a Reaper.",
+  "Augur.MaxGuessesPerMeeting": "Max number of guesses per meeting",
+  "Augur.MaxGuessesPerGame": "Max number of guesses per game",
   "Dreamweaver": "Dreamweaver",
   "DreamweaverInfo": "Drive players insane with weaving",
   "DreamweaverInfoLong": "(Coven):\\nWeave a player; woven players will become insane after the next meeting. Once insane, when they go near someone, they will immediately use their ability if their cooldown is up. Upon your death, all insane players will be freed. When enhanced by the Necronomicon, insane players will suicide after making contact with another player.",
@@ -5520,6 +5535,7 @@
   "IllusionistInfo": "Morph players, kill sampled targets",
   "IllusionistInfoLong": "(Coven):\\nSample a player, then select another player (using Shapeshift) to morph them into the sampled player. Upon gaining the Necronomicon, you gain the ability to kill the sampled player.",
   "Illusionist.ShapeshiftAnimation": "Show Shapeshift Animation",
+  "Illusionist.UnmorphPrevious": "Unmorph previous target if a new one is chosen",
   "Timelord": "Timelord",
   "TimelordInfo": "Refresh or reset cooldowns; kill",
   "TimelordInfoLong": "(Coven):\\nUse your ability on a Coven member to refresh their cooldown (set it to 0). Use your ability on a non-Coven member to reset their cooldown. When enhanced by the Necronomicon, you can kill and also reduce meeting time upon making a kill.",
