--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1505,7 +1505,7 @@
   "MafiaCanKillNum": "Max number of revenges",
   "ImpKnowCyberStarDead": "<color=#ff1919>Impostors</color> know when the <color=#ee4a55>Celebrity</color> dies",
   "NeutralKnowCyberStarDead": "<color=#ffab1b>Neutrals</color> know when the <color=#ee4a55>Celebrity</color> dies",
-  "CovenKnowCyberStarDead": "<color=#7b3fbb>Coven</color> know when the <color=#ee4a55Celebrity</color> dies",
+  "CovenKnowCyberStarDead": "<color=#7b3fbb>Coven</color> know when the <color=#ee4a55>Celebrity</color> dies",
   "JesterCanUseButton": "Can call emergency meetings",
   "MarioVentNumWin": "Number of Vents to win",
   "MarioVentButtonText": "Vent",
@@ -2212,7 +2212,7 @@
   "MerchantMaxSell": "Max number of Add-ons to sell",
   "MerchantMoneyPerSell": "Amount of <color=#D27D2D>money</color> earned for selling an Add-on",
   "MerchantMoneyRequiredToBribe": "Amount of <color=#D27D2D>money</color> required to bribe a killer",
-  "MerchantNotifyBribery": "Inform <color=#D27D2D>Merchant</color> when a killer gets bribed",
+  "MerchantNotifyBribery": "Inform <color=#d27d2d>Merchant</color> when a killer gets bribed",
   "MerchantTargetCrew": "Can sell to <color=#8cffff>Crewmates</color>",
   "MerchantTargetImpostor": "Can sell to <color=#ff1919>Impostors</color>",
   "MerchantTargetNeutral": "Can sell to <color=#ffab1b>Neutrals</color>",
